<resources>
    <string name="facebook_app_id">1751916218404017</string>
    <string name="app_name">Park</string>
    <string name="park_now">Park Now</string>
    <string name="park_later">Park Later</string>
    <string name="search_hint">Type to Search Places</string>
    <string name="you_personal_details">Your Personal Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="fax">Fax</string>
    <string name="you_address">Your Address</string>
    <string name="company">Company</string>
    <string name="address_one">Address 1</string>
    <string name="address_two">Address 2</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="region_or_state">Region / State</string>
    <string name="you_password">Your Password</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="newsletter">Newsletter</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribe_yes">Yes</string>
    <string name="subscribe_no">No</string>
    <string name="continue_register">Continue</string>
    <string name="privacy_policy">I have read and agree to the Privacy Policy</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgotten Password</string>
    <string name="login">Login</string>
    <string name="please_enter_email">Please enter email address.</string>
    <string name="username_password_incorrect">Username or password is incorrect</string>
    <string name="please_enter_first_name">Please Enter First Name</string>
    <string name="please_enter_last_name">Please Enter Last Name</string>
    <string name="please_email">Please Enter Email</string>
    <string name="please_enter_mobile">Please Enter Telephone or Mobile number</string>
    <string name="please_enter_address">Please Enter Address</string>
    <string name="please_enter_city">Please Enter City</string>
    <string name="please_enter_postal_code">Please Enter Postal Code</string>
    <string name="please_enter_password">Please Enter password.</string>
    <string name="please_enter_confirm_password">Please Enter Confirm Password</string>
    <string name="password_same">Password and confirm password should be same.</string>
    <string name="connect_internet">Please connect to working internet.</string>
    <string name="valid_email">Please enter valid email address</string>
    <string name="log_out">Logging Out...</string>
    <string name="please_wait">Please wait...</string>
    <string name="password_message">Password should be contain one lowercase letter, one uppercase
        letter and one number.
    </string>

    <string-array name="country">
        <item>USA</item>
        <item>India</item>
        <item>UK</item>
        <item>Nepal</item>
        <item>New Zealand</item>
        <item>England</item>
    </string-array>

    <string-array name="state">
        <item>Florida</item>
        <item>North Carolina</item>
        <item>Virginia</item>
        <item>Missouri</item>
        <item>California</item>
        <item>South Carolina</item>
    </string-array>
    <string-array name="list_pref_array">
        <item>Require 4 digit PIN to process transaction</item>
        <item>Require password to process transaction</item>
        <item>No authentication to process transaction</item>
    </string-array>
    <string-array name="list_pref_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="create_new_account">Create New Account</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="need_an_account">Need an account?</string>
    <string name="distance_summury">Set radius for park later</string>
    <string name="distance">Distance</string>
    <string name="authentication_options">Authentication Options</string>
    <string name="authentication_options_details">Authentication Options for processing
        transaction
    </string>
    <string name="business_name">Business Name</string>
    <string name="my_account">My Account</string>
    <string name="preference">Preference</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
