<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_register"
            android:title="@string/create_new_account"/>

        <item
            android:id="@+id/nav_my_account"
            android:title="@string/my_account"/>
        <item
            android:id="@+id/nav_my_pref"
            android:title="@string/preference"/>
        <item
            android:id="@+id/nav_login"
            android:title="@string/login"/>
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>
-->
</menu>
