<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/country"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"/>
    <LinearLayout
        android:id="@+id/spCountryLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txtCountry"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spCountry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.3"
            android:entries="@array/country"/>
        <ProgressBar
            android:id="@+id/countryProgressBar"
            android:layout_weight="1.7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txtCountry"
            android:visibility="gone"
            android:layout_toRightOf="@+id/spCountry"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtRegionOrState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spCountryLayout"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/region_or_state"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"/>
    <LinearLayout
        android:id="@+id/spRegionOrStateLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txtRegionOrState"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spRegionOrState"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.3"
            android:entries="@array/state"/>
        <ProgressBar
            android:id="@+id/regionOrStateProgressBar"
            android:layout_weight="1.7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_toRightOf="@+id/spCountry"/>
    </LinearLayout>
    <TextView
        android:layout_below="@id/spRegionOrStateLayout"
        android:id="@+id/txtYourPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/you_password"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>
    <View
        android:id="@+id/viewThree"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/txtYourPassword"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@android:color/darker_gray"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewThree">
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPassword"
            android:layout_marginLeft="5dp"
            android:textSize="15sp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputPassword">
        <EditText
            android:id="@+id/etPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPasswordConfirm"
            android:layout_marginLeft="5dp"
            android:hint="@string/password_confirm"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txtNewsletter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputConfirmPassword"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/newsletter"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>
    <View
        android:id="@+id/viewTwo"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/txtNewsletter"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:id="@+id/subscribeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewTwo"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtSubscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:text="@string/subscribe"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"/>
        <RadioGroup
            android:id="@+id/rgSubscribe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rdSubscribeYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscribe_yes"
                android:textSize="18sp"
                android:textColor="@android:color/darker_gray"/>
            <RadioButton
                android:id="@+id/rdSubscribeNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:checked="true"
                android:text="@string/subscribe_no"
                android:textSize="18sp"
                android:textColor="@android:color/darker_gray"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/subscribeLayoutTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subscribeLayout"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:text="@string/privacy_policy"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"/>
        <CheckBox
            android:id="@+id/chkPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/subscribeLayoutTwo"
        android:layout_marginTop="10dp"
        android:background="@drawable/register_button_drawable"
        android:text="@string/continue_register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>
</RelativeLayout>