<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@android:color/white"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtYourPersonalDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/you_personal_details"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>
    <View
        android:id="@+id/viewOne"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/txtYourPersonalDetails"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/txtFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewOne"
        android:padding="10dp"
        android:text="@string/first_name"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFirstName"
        android:layout_marginLeft="5dp"
        android:hint="@string/first_name"
        android:maxLength="30"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/txtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFirstName"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/last_name"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLastName"
        android:layout_marginLeft="5dp"
        android:maxLength="30"
        android:hint="@string/last_name"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLastName"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/email"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmail"
        android:layout_marginLeft="5dp"
        android:hint="@string/email"
        android:inputType="text|textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/txtTelephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/telephone"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/etTelephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTelephone"
        android:layout_marginLeft="5dp"
        android:hint="@string/telephone"
        android:inputType="phone"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="15sp"/>

</RelativeLayout>