<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5fb0c9"
    android:gravity="center"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Welcome to Park"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold"/>
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="80dp"
        android:background="#fff"
        card_view:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_centerInParent="true"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/llll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableTint="#FF4081"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawableTint="#FF4081"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txtForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:paddingTop="10dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/light_blue"/>
                    <TextView
                        android:id="@+id/txtNeedAnAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingTop="10dp"
                        android:text="@string/need_an_account"
                        android:textColor="@color/light_blue"/>
                </RelativeLayout>


            </LinearLayout>
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llll"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/corner"
                android:elevation="5dp"
                android:text="Sign in"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/txtOr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="OR"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtOr"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/btnFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@+id/btnTwitter"
                    android:src="@drawable/ic_facebook"/>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/btnGooglePlus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/btnFacebook"
                        android:src="@drawable/ic_google_plus"
                        android:visibility="visible"/>
                </FrameLayout>

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:background="@drawable/user_profile_image_background"
        android:elevation="3dp"
        android:src="@mipmap/ic_launcher"/>
</RelativeLayout>